move commands in cli-commands to node-commands

--- a/toolkit/cli/node-commands/Cargo.toml
+++ b/toolkit/cli/node-commands/Cargo.toml
@@ -16,6 +16,7 @@ parity-scale-codec = { workspace = true }
 partner-chains-cli = { workspace = true }
 partner-chains-smart-contracts-commands = { workspace = true }
 plutus = { workspace = true }
+plutus-datum-derive = { workspace = true, default-features = true }
 sidechain-domain = { workspace = true, default-features = true }
 sc-cli = { workspace = true, default-features = true }
 sc-service = { workspace = true, default-features = true }
@@ -25,6 +26,14 @@ sp-runtime = { workspace = true, default-features = true }
 sp-sidechain = { workspace = true, default-features = true }
 sp-session-validator-management = { workspace = true }
 sp-session-validator-management-query = { workspace = true }
+anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+ed25519-zebra = { workspace = true }
+secp256k1 = { workspace = true, features = ["std", "global-context"] }
+pallet-address-associations = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
 tokio = { workspace = true }
+hex = { workspace = true }
+hex-literal = { workspace = true }
