--- a/toolkit/cli/node-commands/Cargo.toml
+++ b/toolkit/cli/node-commands/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
 [dependencies]
 authority-selection-inherents = { workspace = true }
 clap = { workspace = true }
-cli-commands = { workspace = true }
+cli-utils = { workspace = true }
 env_logger = { workspace = true }
 frame-support = { workspace = true }
 log = { workspace = true }
