--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = { workspace = true, features = ["std"] }
 sidechain-runtime = { workspace = true }
 sp-core = { workspace = true, features = ["std"] }
 sp-runtime = { workspace = true }
-cli-commands = { workspace = true }
+cli-utils = { workspace = true }
 thiserror = { workspace = true }
 tempfile = { workspace = true }
 secp256k1 = { workspace = true, features = ["std"] }
