test: set new chain for ci-preview
fixes:
- ci-preview env was using staging's addresses and was impacting nightly tests; I initialized separate chain for ci

changed:
- switch nightly to release branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -473,7 +473,7 @@ jobs:
         with:
           image:  ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-post-merge.outputs.sha }}
           sha: ${{ needs.build-linux-post-merge.outputs.sha }}
-          no-wipe: false
+          no-wipe: true
         env:
           AWS_REGION: "eu-central-1"
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
