--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
 	"toolkit/pallets/address-associations",
 	"toolkit/pallets/block-participation",
 	"toolkit/primitives/block-participation",
+	"toolkit/primitives/block-producer-metadata",
 ]
 resolver = "2"
 
@@ -237,3 +238,4 @@ partner-chains-smart-contracts-commands = { path = "toolkit/cli/smart-contracts-
 pallet-address-associations = { path = "toolkit/pallets/address-associations", default-features = false }
 pallet-block-participation = { path = "toolkit/pallets/block-participation", default-features = false }
 sp-block-participation = { path = "toolkit/primitives/block-participation", default-features = false }
+sp-block-producer-metadata = { path = "toolkit/primitives/block-producer-metadata", default-features = false }
