--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = { workspace = true, default-features = false, features = [
 pallet-aura = { workspace = true }
 pallet-balances = { workspace = true }
 frame-support = { workspace = true }
+pallet-glutton = { workspace = true }
 pallet-grandpa = { workspace = true }
 pallet-partner-chains-session = { workspace = true, features = ["pallet-session-compat"] }
 pallet-session = { workspace = true }
@@ -123,6 +124,7 @@ std = [
 	"pallet-aura/std",
 	"pallet-balances/std",
 	"pallet-block-production-log/std",
+	"pallet-glutton/std",
 	"pallet-grandpa/std",
 	"pallet-sudo/std",
 	"pallet-partner-chains-session/std",
