--- a/toolkit/cli/commands/Cargo.toml
+++ b/toolkit/cli/commands/Cargo.toml
@@ -14,7 +14,7 @@ hex = { workspace = true }
 hex-literal = { workspace = true }
 plutus = { workspace = true, default-features = true }
 plutus-datum-derive = { workspace = true, default-features = true }
-secp256k1 = { workspace = true, features = ["std", "global-context", "hashes"] }
+secp256k1 = { workspace = true, features = ["std", "global-context"] }
 sidechain-domain = { workspace = true, default-features = true, features = [
 	"std",
 ] }
