--- a/toolkit/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/toolkit/mainchain-follower/db-sync-follower/Cargo.toml
@@ -6,7 +6,8 @@ license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "migrate", "bigdecimal"]}
+sqlx = { workspace = true }
+db-sync-sqlx = { workspace = true }
 tokio = { workspace = true, features = ["full"]}
 testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
 futures = { workspace = true }
@@ -19,7 +20,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 bigdecimal = { workspace = true }
 async-trait = { workspace = true }
-num-traits = { workspace = true }
 num-bigint = { workspace = true }
 log = { workspace = true }
 thiserror = { workspace = true }
