test: add delegator rewards test and refactor CLI
added:
- new test for delegator rewards in `test_delegator_rewards.py` 
to verify raw inherent data

changed:
- refactored `get_stake_pool_id` method in `cardano_cli.py` to simplify its parameters

--- a/e2e-tests/requirements.txt
+++ b/e2e-tests/requirements.txt
@@ -1,6 +1,7 @@
 omegaconf==2.3.0
 pytest==8.3.4
 pytest-xdist==3.6.1
+pytest-dependency==0.6.0
 substrate-interface==1.7.11
 sqlalchemy==2.0.38
 psycopg2-binary==2.9.10
