--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -24,9 +24,8 @@ inquire = { workspace = true }
 libp2p-identity = { workspace = true, features = ["peerid", "ed25519"] }
 serde = { workspace = true }
 serde_json = { workspace = true, features = ["std"] }
-sidechain-runtime = { workspace = true }
 sp-core = { workspace = true, features = ["std"] }
-sp-runtime = { workspace = true }
+sp-runtime = { workspace = true, features = ["std"] }
 thiserror = { workspace = true }
 tempfile = { workspace = true }
 secp256k1 = { workspace = true, features = ["std"] }
@@ -39,6 +38,8 @@ log = { workspace = true }
 plutus = { workspace = true, default-features = true }
 plutus-datum-derive = { workspace = true, default-features = true }
 ed25519-zebra = { workspace = true }
+sp-session-validator-management = { workspace = true, features = ["std"] }
+pallet-session-validator-management = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
