--- a/toolkit/block-producer-metadata/primitives/Cargo.toml
+++ b/toolkit/block-producer-metadata/primitives/Cargo.toml
@@ -15,7 +15,7 @@ workspace = true
 [dependencies]
 sidechain-domain = { workspace = true }
 parity-scale-codec = { workspace = true }
-secp256k1 = { workspace = true, features = ["global-context", "hashes"] }
+k256 = { workspace = true,features = ["sha256"] }
 
 [dev-dependencies]
 hex-literal = { workspace = true }
@@ -24,5 +24,6 @@ hex-literal = { workspace = true }
 default = ["std"]
 std = [
     "sidechain-domain/std",
-    "secp256k1/std",
+    "k256/std",
+    "parity-scale-codec/std",
 ]
