--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ members = [
 	"toolkit/address-associations/pallet",
 	"toolkit/block-participation/pallet",
 	"toolkit/block-participation/primitives",
+	"toolkit/block-producer-metadata/pallet",
 	"toolkit/block-producer-metadata/primitives",
 	"toolkit/utils/db-sync-sqlx",
 ]
@@ -139,6 +140,7 @@ rand_chacha = { version = "0.3.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
 tokio-retry = { version = "0.3" }
 secp256k1 = { version = "0.28.2", default-features = false }
+k256 = { version = "0.13.4", default-features = false }
 serde = { version = "1.0.209", default-features = false, features = [
 	"derive",
 	"alloc",
@@ -303,6 +305,7 @@ pallet-block-participation = { path = "toolkit/block-participation/pallet", defa
 sp-block-participation = { path = "toolkit/block-participation/primitives", default-features = false }
 
 # block producer metadata
+pallet-block-producer-metadata = { path = "toolkit/block-producer-metadata/pallet", default-features = false }
 sp-block-producer-metadata = { path = "toolkit/block-producer-metadata/primitives", default-features = false }
 
 # main chain follower
