--- a/toolkit/cli/commands/Cargo.toml
+++ b/toolkit/cli/commands/Cargo.toml
@@ -21,6 +21,7 @@ hex-literal = { workspace = true }
 plutus = { workspace = true, default-features = true }
 plutus-datum-derive = { workspace = true, default-features = true }
 secp256k1 = { workspace = true, features = ["std", "global-context"] }
+k256 = { workspace = true, features = ["serde"] }
 sidechain-domain = { workspace = true, default-features = true, features = [
 	"std",
 ] }
