--- a/toolkit/block-participation/primitives/Cargo.toml
+++ b/toolkit/block-participation/primitives/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "sp-block-participation"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme = "README.md"
+
+[lints]
+workspace = true
 
 [dependencies]
 thiserror = { workspace = true }
