--- a/node/node/Cargo.toml
+++ b/node/node/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "partner-chains-node"
-version = "1.6.0"
+version.workspace = true
 description = "A reference implementation of a partner chain node"
-authors = ["IOG"]
-homepage = "https://iohk.io/"
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 license = "Unlicense"
 publish = false
-repository = "https://github.com/input-output-hk/partner-chains/"
 build = "build.rs"
 
 [package.metadata.docs.rs]
@@ -15,6 +15,9 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [[bin]]
 name = "partner-chains-node"
+
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
