--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
 name = "sidechain-runtime"
-version = "1.6.0"
+version.workspace = true
 description = "A reference implementation of a partner chain runtime"
-authors = ["IOG"]
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 license = "Unlicense"
 publish = false
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 log = { workspace = true }
