--- a/substrate-extensions/aura/consensus/Cargo.toml
+++ b/substrate-extensions/aura/consensus/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 name = "sc-partner-chains-consensus-aura"
-version = "1.6.0"
+version.workspace = true
 description = "Partner Chains modification to the Substrate Aura consensus engine"
-authors = [ "IOG "]
-homepage = "https://iohk.io/"
-edition = "2021"
+authors.workspace = true
+homepage.workspace = true
+edition.workspace = true
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
-repository = "https://github.com/input-output-hk/partner-chains/"
+repository.workspace = true
 readme = "README.md"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
