--- a/substrate-extensions/aura/primitives/Cargo.toml
+++ b/substrate-extensions/aura/primitives/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 name = "sp-partner-chains-consensus-aura"
-version = "1.6.0"
+version.workspace = true
 description = "Primitives required by Partner Chains customized Aura consensus"
-authors = [ "IOG "]
-homepage = "https://iohk.io/"
-edition = "2021"
+authors.workspace = true
+homepage.workspace = true
+edition.workspace = true
 license = "Apache-2.0"
-repository = "https://github.com/input-output-hk/partner-chains/"
+repository.workspace = true
 readme = "README.md"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 futures = {workspace = true}
