--- a/toolkit/address-associations/pallet/Cargo.toml
+++ b/toolkit/address-associations/pallet/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "pallet-address-associations"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 frame-benchmarking = { workspace = true, optional = true }
