--- a/toolkit/block-producer-metadata/primitives/Cargo.toml
+++ b/toolkit/block-producer-metadata/primitives/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "sp-block-producer-metadata"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
 description = "Primitives for the block producer on-chain metadata feature"
+readme = "README.md"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 sidechain-domain = { workspace = true }
