--- a/toolkit/block-production-log/primitives/Cargo.toml
+++ b/toolkit/block-production-log/primitives/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "sp-block-production-log"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
