--- a/toolkit/cli/node-commands/Cargo.toml
+++ b/toolkit/cli/node-commands/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "partner-chains-node-commands"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 authority-selection-inherents = { workspace = true }
