--- a/toolkit/committee-selection/pallet/benchmarking/Cargo.toml
+++ b/toolkit/committee-selection/pallet/benchmarking/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "pallet-session-validator-management-benchmarking"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 parity-scale-codec = { workspace = true }
