--- a/toolkit/committee-selection/primitives/Cargo.toml
+++ b/toolkit/committee-selection/primitives/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "sp-session-validator-management"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lints]
+workspace = true
 
 [dependencies]
 scale-info = { workspace = true }
