--- a/toolkit/mainchain-follower/mock/Cargo.toml
+++ b/toolkit/mainchain-follower/mock/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "main-chain-follower-mock"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 publish = false
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme = "README.md"
+
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
