--- a/toolkit/native-token-management/primitives/Cargo.toml
+++ b/toolkit/native-token-management/primitives/Cargo.toml
@@ -1,11 +1,18 @@
 [package]
 name = "sp-native-token-management"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme = "README.md"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true, optional = true }
