--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
 name = "partner-chains-cli"
-version = "1.6.0"
-authors = ["IOG"]
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
-repository = "https://github.com/input-output-hk/partner-chains"
 description = "Wizard style CLI for getting started as partner chains participant"
-readme = "readme.md"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme = "README.md"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 sidechain-domain = { workspace = true, features = ["std"] }
