--- a/toolkit/sidechain/domain/Cargo.toml
+++ b/toolkit/sidechain/domain/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "sidechain-domain"
-version = "1.6.0"
-authors = [ "Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>" ]
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 sp-core = { workspace = true, features = ["serde"] }
