--- a/toolkit/sidechain/rpc/Cargo.toml
+++ b/toolkit/sidechain/rpc/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "pallet-sidechain-rpc"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lints]
+workspace = true
 
 [dependencies]
 parity-scale-codec = { workspace = true, features = ['std'] }
