--- a/toolkit/sidechain/sidechain-slots/Cargo.toml
+++ b/toolkit/sidechain/sidechain-slots/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "sidechain-slots"
-version = "1.6.0"
-authors = ["IOG"]
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
-repository = "https://github.com/input-output-hk/partner-chains"
 description = "Sidechain slots and epoch calcuations"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 readme = "README.md"
+
+[lints]
+workspace = true
 
 [dependencies]
 parity-scale-codec = { workspace = true }
