--- a/toolkit/smart-contracts/commands/Cargo.toml
+++ b/toolkit/smart-contracts/commands/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "partner-chains-smart-contracts-commands"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 clap = { workspace = true }
