--- a/toolkit/smart-contracts/offchain/Cargo.toml
+++ b/toolkit/smart-contracts/offchain/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "partner-chains-cardano-offchain"
-version = "1.6.0"
-authors = ["IOG"]
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
-repository = "https://github.com/input-output-hk/partner-chains"
 description = "Partner Chains Smart Contracts Offchain code"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[lints]
+workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
