--- a/toolkit/smart-contracts/plutus-data/Cargo.toml
+++ b/toolkit/smart-contracts/plutus-data/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "partner-chains-plutus-data"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 description = "Parsing and serialization of Plutus data schemas used by Partner Chains smart contracts."
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 log = { workspace = true }
