--- a/toolkit/utils/db-sync-sqlx/Cargo.toml
+++ b/toolkit/utils/db-sync-sqlx/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "db-sync-sqlx"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 description = "sqlx support for Cardano Db-Sync queries"
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 sqlx = { workspace = true }
