--- a/toolkit/utils/plutus/Cargo.toml
+++ b/toolkit/utils/plutus/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "plutus"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 publish = false
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 hex = { workspace = true }
