--- a/toolkit/utils/plutus/plutus-datum-derive/Cargo.toml
+++ b/toolkit/utils/plutus/plutus-datum-derive/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "plutus-datum-derive"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [lib]
 proc-macro = true
+
+[lints]
+workspace = true
 
 [dependencies]
 syn = { workspace = true }
