--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,7 +80,7 @@ nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
 option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
 stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
 too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
-type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
+type_complexity = { level = "allow", priority = 2 }
 unit_arg = { level = "allow", priority = 2 }                         # stylistic
 unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
 useless_conversion = { level = "allow", priority = 2 }               # Types may change
