--- a/toolkit/block-producer-metadata/rpc/Cargo.toml
+++ b/toolkit/block-producer-metadata/rpc/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "pallet-block-producer-metadata-rpc"
-version = "1.6.0"
-edition = "2021"
+version.workspace = true
 license = "Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
 parity-scale-codec = { workspace = true, features = ['std'] }
