add multi-sig operations to integration tests

--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -13,6 +13,7 @@ markers =
     mc_state_reference_block: run tests for Mainchain State Reference feature
     block_production_log: run test for block production log pallet
     native_token: run tests for Native Token Managemenet System feature
+    multisig_governance: run tests for Multisig Governance feature
     rpc: run tests for RPC endpoints
     substrate: run tests for Substrate framework core features
     test_key: key for xray
