--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -88,7 +88,7 @@ pallet-transaction-payment-rpc = { workspace = true }
 frame-benchmarking = { workspace = true }
 
 # Local Dependencies
-sidechain-runtime = { workspace = true }
+partner-chains-demo-runtime = { workspace = true }
 sidechain-mc-hash = { workspace = true, features = ["mock"] }
 sp-native-token-management = { workspace = true }
 db-sync-follower = { workspace = true, features = [
