--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM partner-chains-node-builder:latest AS builder
 
 FROM docker.io/library/ubuntu:20.04
-COPY --from=builder /partner-chains-node/docker-build/target/release/partner-chains-node /usr/local/bin
+COPY --from=builder /partner-chains-node/docker-build/target/release/partner-chains-demo-node /usr/local/bin/partner-chains-node
 
 RUN useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate && \
 	mkdir -p /data /substrate/.local/share/partner-chains-node && \
