--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -12,7 +12,7 @@ markers =
     committee_members: run tests for Committee Members feature
     mc_state_reference_block: run tests for Mainchain State Reference feature
     block_production_log: run test for block production log pallet
-    native_token: run tests for Native Token Managemenet System feature
+    reserve: run tests for Reserve Managemenet System feature
     multisig_governance: run tests for Multisig Governance feature
     rpc: run tests for RPC endpoints
     substrate: run tests for Substrate framework core features
