--- a/toolkit/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/toolkit/mainchain-follower/db-sync-follower/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "db-sync-follower"
+name = "partner-chains-db-sync-data-sources"
 version.workspace = true
 license = "Apache-2.0"
 authors.workspace = true
