--- a/toolkit/mainchain-follower/main-chain-follower-cli/Cargo.toml
+++ b/toolkit/mainchain-follower/main-chain-follower-cli/Cargo.toml
@@ -17,7 +17,7 @@ workspace = true
 clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-db-sync-follower = { workspace = true, features = ["block-source", "candidate-source"] }
+partner-chains-db-sync-data-sources = { workspace = true, features = ["block-source", "candidate-source"] }
 tokio = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
