--- a/.github/actions/artifacts/build-pc-artifacts/action.yml
+++ b/.github/actions/artifacts/build-pc-artifacts/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: "Commit SHA to checkout"
     required: true
   os:
-    description: "Operating system for the build (linux, macos-x86_64, macos-arm64)"
+    description: "Operating system for the build (linux-x86_64, linux-arm64, macos-x86_64, macos-arm64)"
     required: true
 
 runs:
@@ -21,8 +21,10 @@ runs:
     - name: Set filename variables
       shell: bash
       run: |
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-x86_64-linux" >> $GITHUB_ENV
+        elif [[ "${{ inputs.os }}" == "linux-arm64" ]]; then
+          echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-aarch64-linux" >> $GITHUB_ENV
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
@@ -33,7 +35,7 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_WORKSPACE
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" || "${{ inputs.os }}" == "linux-arm64" ]]; then
           sudo apt-get install -y protobuf-compiler
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v21.3/protoc-21.3-osx-x86_64.zip
@@ -49,10 +51,15 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_WORKSPACE
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" ]]; then
           rustup target add x86_64-unknown-linux-gnu
           cargo build -p partner-chains-node --locked --release --target x86_64-unknown-linux-gnu
           cp target/x86_64-unknown-linux-gnu/release/partner-chains-node $PARTNER_CHAINS_NODE
+          chmod +x $PARTNER_CHAINS_NODE
+        elif [[ "${{ inputs.os }}" == "linux-arm64" ]]; then
+          rustup target add aarch64-unknown-linux-gnu
+          cargo build -p partner-chains-node --locked --release --target aarch64-unknown-linux-gnu
+          cp target/aarch64-unknown-linux-gnu/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           rustup target add x86_64-apple-darwin
