--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -294,7 +294,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    runs-on: macos-latest
+    runs-on: ubuntu-latest-arm64
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
@@ -625,7 +625,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    runs-on: macos-latest
+    runs-on: ubuntu-latest-arm64
     steps:
       - name: Checkout specific SHA
         uses: actions/checkout@v4
