fix: workflow_dispatch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -623,7 +623,7 @@ jobs:
             ./to-build/staging_preprod_chain_spec.json
 
   build-linux-arm64-workflow-dispatch:
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    if: github.event_name == 'workflow_dispatch'
     permissions:
       id-token: write
       contents: write
