--- a/.github/actions/artifacts/build-pc-artifacts/action.yml
+++ b/.github/actions/artifacts/build-pc-artifacts/action.yml
@@ -8,9 +8,8 @@ inputs:
     description: "Commit SHA to checkout"
     required: true
   os:
-    description: "Operating system for the build (linux, macos-x86_64, macos-arm64)"
+    description: "Operating system for the build (linux-x86_64, linux-arm64, macos-x86_64, macos-arm64)"
     required: true
-
 runs:
   using: "composite"
   steps:
@@ -21,19 +20,20 @@ runs:
     - name: Set filename variables
       shell: bash
       run: |
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-x86_64-linux" >> $GITHUB_ENV
+        elif [[ "${{ inputs.os }}" == "linux-arm64" ]]; then
+          echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-aarch64-linux" >> $GITHUB_ENV
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
         fi
-
     - name: Install protoc
       shell: bash
       run: |
         cd $GITHUB_WORKSPACE
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" || "${{ inputs.os }}" == "linux-arm64" ]]; then
           sudo apt-get install -y protobuf-compiler
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v21.3/protoc-21.3-osx-x86_64.zip
@@ -44,28 +44,60 @@ runs:
           unzip protoc-21.3-osx-aarch_64.zip -d $HOME/protoc
           sudo mv $HOME/protoc/bin/protoc /usr/local/bin/protoc
         fi
-
+    - name: Install cross-compilation dependencies for Linux ARM64
+      shell: bash
+      run: |
+        if [[ "${{ inputs.os }}" == "linux-arm64" ]]; then
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+        fi
+    - name: Install LLVM for macOS
+      if: startsWith(inputs.os, 'macos')
+      shell: bash
+      run: |
+        brew install llvm
+        echo "LLVM_PATH=$(brew --prefix llvm)" >> $GITHUB_ENV
+        echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
+        echo 'export PATH="$(brew --prefix llvm)/bin:$PATH"' >> ~/.bash_profile
+        source ~/.bash_profile
+        echo "CC=$(brew --prefix llvm)/bin/clang" >> $GITHUB_ENV
+        echo "CXX=$(brew --prefix llvm)/bin/clang++" >> $GITHUB_ENV
+        echo "LLVM_CONFIG=$(brew --prefix llvm)/bin/llvm-config" >> $GITHUB_ENV
+        clang --version
     - name: Build partner-chains-node
       shell: bash
       run: |
         cd $GITHUB_WORKSPACE
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
+        if [[ "${{ inputs.os }}" == "linux-x86_64" ]]; then
           rustup target add x86_64-unknown-linux-gnu
           cargo build -p partner-chains-node --locked --release --target x86_64-unknown-linux-gnu
           cp target/x86_64-unknown-linux-gnu/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
+        elif [[ "${{ inputs.os }}" == "linux-arm64" ]]; then
+          rustup target add aarch64-unknown-linux-gnu
+          
+          # Configure cross-compilation environment variables
+          export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
+          export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
+          export CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g++
+          export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+          
+          cargo build -p partner-chains-node --locked --release --target aarch64-unknown-linux-gnu
+          cp target/aarch64-unknown-linux-gnu/release/partner-chains-node $PARTNER_CHAINS_NODE
+          chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           rustup target add x86_64-apple-darwin
+          RUSTFLAGS="-C linker=${LLVM_PATH}/bin/clang" \
           cargo build -p partner-chains-node --locked --release --target x86_64-apple-darwin
           cp target/x86_64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           rustup target add aarch64-apple-darwin
+          RUSTFLAGS="-C linker=${LLVM_PATH}/bin/clang" \
           cargo build -p partner-chains-node --locked --release --target aarch64-apple-darwin
           cp target/aarch64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
         fi
-
     - name: Upload partner-chains-node artifact
       uses: actions/upload-artifact@v4
       with:
